--- a/style.css
+++ b/style.css
@@ -1,44 +1,45 @@
 /* Basic Style */
-body {
+.root {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.annotation {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.annotation__img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.annotation__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .annotation { 
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.input,
+.label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.input-form {
   display: flex;
 }
 
@@ -57,7 +58,8 @@ button{
   outline: none;
 }
 
-button {
+.btn,
+.delete {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +69,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.title,
+.add-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +85,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +98,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-title {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.input-form .input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,22 +123,22 @@ li {
   align-items: center;
 }
 
-li > * {
+.list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list__item > .checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.list__item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.list__item > .input {
   width: 226px;
 }
 
@@ -151,21 +153,21 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list__item_complete .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__item .input {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.list__item_edit .input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.list__item_edit .label {
   display: none;
 }
