--- a/style.css
+++ b/style.css
@@ -144,13 +144,13 @@ button{
   width: 226px;
 }
 
-button.delete img {
+.delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete__img:hover {
   transform: rotateZ(0);
 }
 
