--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ button{
 
 /* Heading */
 .title,
-.add-title {
+.add__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -105,7 +105,7 @@ button{
 }
 
 /* New Task */
-.add-title {
+.add__title {
   display: block;
   margin: 0 0 20px;
 }
